web-infras/parser/tests/fixtures/babel/es2015/class-methods/disallow-computed-async-identifier/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,11)
2|  [async] a() {}
 |         ^
